Adds Some logic for displaying meals

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
             type="text"
             id="search"
             placeholder="Search for meals or keywords"
-            class="border rounded-l sm:w-full"
+            class="border rounded-l sm:w-full text-black"
           />
           <button class="search-btn border rounded-r" type="submit">
             <i class="fas fa-search text-gray-900"></i>
@@ -38,7 +38,7 @@
 
       <div id="result-heading"></div>
       <div id="meals" class="meals"></div>
-      <div id="singlemeal"></div>
+      <div id="single-meal"></div>
     </div>
 
     <script src="script.js"></script>
