Adds CSS for menu items

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   </head>
   <body class="bg-black text-white">
     <div
-      class="container m-auto max-w-3xl flex flex-col items-center justify-center text-center"
+      class="m-auto max-w-3xl flex flex-col items-center justify-center text-center"
     >
       <h1 class="font-black text-2xl">Meal Finder</h1>
       <div class="flex mt-2">
@@ -37,7 +37,7 @@
       </div>
 
       <div id="result-heading"></div>
-      <div id="meals" class="meals"></div>
+      <div id="meals" class="meals grid grid-cols-4	gap-5"></div>
       <div id="single-meal"></div>
     </div>
 
