Adds Smooth transition on hover to meals

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
       </div>
 
       <div id="result-heading"></div>
-      <div id="meals" class="meals grid grid-cols-4	gap-5"></div>
+      <div id="meals" class="meals"></div>
       <div id="single-meal"></div>
     </div>
 
