Adds git ignore file and other changes

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <title>Meal Finder</title>
   </head>
-  <body class="bg-black text-white">
+  <body class="bg-gray-900 text-white">
     <div
       class="m-auto max-w-3xl flex flex-col items-center justify-center text-center"
     >
